core/src/ast/snapshots/span_testing/diplomat_core__ast__logging__tests__flush@generic_types.rs_ugly.snap
---
source: core/src/ast/logging.rs
expression: self.buf
---
Diplomat error: Generic types are unsupported.
In src/ast/snapshots/span_testing/generic_types.rs:5:30:
...rics<T> ()...
        ^
Suggestion: Remove generic type.
